# LitGraph

./: .env.example  README.md  plan.md  pyproject.toml  uv-setup.md
config/: config.default.yaml  questions.yaml  schema.yaml
config/prompts/: entity_extraction.yaml  innovation.yaml  keyword_expansion.yaml  paper_analysis.yaml  relevance_filter.yaml
src/litgraph/: __init__.py  cli.py  retry.py  settings.py
src/litgraph/analysis/: batch.py  innovation.py  paper.py
src/litgraph/kg/: direct.py  graph.py  schema.py
src/litgraph/llm/: client.py  prompts.py
src/litgraph/output/: report.py
src/litgraph/search/: arxiv.py  dedup.py  filters.py  semantic.py
tests/: conftest.py
tests/dummy/: test_analysis_format.py  test_cli_args.py  test_innovation.py  test_kg_direct.py  test_kg_schema.py  test_pdf_parse.py  test_pipeline_resume.py  test_prompts.py  test_search_dedup.py  test_settings.py
tests/live/: test_kg_insert.py  test_llm_client.py  test_pipeline_e2e.py  test_search_real.py
